api fix transaction
